Pour la postérité

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -218,7 +218,7 @@
 \begin{frame}[fragile]{Étude de la fonction main}
 	\vspace{-2mm}
 	\begin{center}
-		\includegraphics[width=0.5\linewidth]{114/main.png}
+		\includegraphics[width=0.5\linewidth]{114/main.png}%
 		\includegraphics[width=0.5\linewidth]{114/syntax.png}
 	\end{center}
 
